# Olist-E-Commerce

./: .gitignore  README.md  docker-compose.yml  documentation.txt  ingest_data.py  main.py  ml.ipynb  pyproject.toml
sql_script/: bronze_to_silver.sql  category_translation addition.sql  silver_to_gold.sql  silver_to_gold_ml.sql
