[project]
name = "data-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "imbalanced-learn>=0.14.2",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
]
